fixed nav bar to match open names hamburger style and the link click it will collapse the menu and fixed when nav menu appears

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -140,13 +140,19 @@ h1.hero-head{font-family:'Source Code Pro',monospace;margin-bottom:1.5rem;font-s
 .brand-logo{display:none;}
 .hamburger{display:none;}
 .hamburger:focus{outline:none;}
+.navbar .navbar-toggle{padding:9px 11px;border-color:transparent;margin-top:.25rem;margin-bottom:.25rem;background:0 0;}
+.navbar-toggle {position:relative;float:right;border:1px solid transparent;border-radius:4px;}
+.navbar-toggle .icon-bar + .icon-bar{margin-top:4px;}
+.navbar-toggle .icon-bar{display:block;width:15px;height:1px;border-radius: 1px;}
+.landing-sandwich-icon{background-color:rgba(255,255,255,1)!important;}
 div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand{display:none;}
 div.app-common > div > div.navbar-fixed-top.bg-primary > header.container.nav-header > nav.navbar > a.navbar-brand.brand-bug{display:block;}
 a.nav-link{color:#fff;font-size:0.8125rem;font-weight:300;margin-top:0.0625rem;}
 a.nav-link:hover,a.nav-link:focus{color:#fff;}
 .nav-item:first-child{margin-left:.625rem;}
 .nav{font-family:'Source Code Pro',monospace;}
-
+.opening{position:relative;height:0;overflow:hidden;-webkit-transition-timing-function:ease;-o-transition-timing-function:ease;transition-timing-function:ease;-webkit-transition-duration:.35s;-o-transition-duration:.35s;transition-duration:.35s;-webkit-transition-property:height;-o-transition-property:height;transition-property:height;}
+.closing{position:relative;height:auto;overflow:hidden;-webkit-transition-timing-function:ease;-o-transition-timing-function:ease;transition-timing-function:ease;-webkit-transition-duration:.35s;-o-transition-duration:.35s;transition-duration:.35s;-webkit-transition-property:height;-o-transition-property:height;transition-property:height;}
 
 /* Buttons */
 .btn{font-family:'Source Code Pro',monospace;padding:0.5625rem 2.25rem;font-size:0.8125rem;font-weight:400;line-height:1.75rem;border-radius:0;}
@@ -478,18 +484,10 @@ section{word-break:break-word;}
 @media (min-width:1200px){
 }
 
-
+/* x-Small devices dropdown-menu and sticky-share*/
 @media (max-width:575px){
   .sticky-share{display:flex!important;flex-direction:row;justify-content:center;align-items:center;width:100%;height:50px;bottom:0!important;left:0;top:initial;z-index:20;background-color:white;border-top:1px solid #f0f0f0;}
   .sticky-share div{margin:10px 10px 10px 10px;}
-}
-
-/* x-Small devices (hide last child in navbar) */
-@media (max-width:348px){
-  li.nav-item:nth-last-child(2){display:none;}
-
-/* x-Small devices dropdown-menu */
-@media (max-width:575px){
   .desktop-nav{display:none;}
   .hamburger{display:inline;background-color:transparent;border:none;height:100%;line-height:35px;font-size:20px;}
   .nav-item:first-child{margin-left:1.2rem;}
@@ -499,4 +497,9 @@ section{word-break:break-word;}
 
 @media (min-width:576px) {
   .mobile-nav > ul{display:none;}
+}
+
+/* x-Small devices (hide last child in navbar) */
+@media (max-width:348px){
+  li.nav-item:nth-last-child(2){display:none;}
 }
